welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  var x:Int=0
  baisseBrosse()
  for(i <-1 to 6){
    avance()
  }
  getDirection()
  if(getDirection=EST){
    gauche()
  } else {
    droite()
  }
  
}